--- a/partials/home.html
+++ b/partials/home.html
@@ -1,7 +1,13 @@
 <section id="homeContent">
 
 	<h1>Important Recent Developments in New Hampshire Court</h1>
-
+	
+	<h2>June 14, 2019 </h2>
+	
+	<p>The ruling of the New Hampshire Supreme Court on the appeal lodged by Second Church, Melbourne, on January 11, 2019 may be read here, dated June 14, 2019.</p>
+	
+	<p><a href="https://www.courts.state.nh.us/supreme/opinions/2019/index.htm">https://www.courts.state.nh.us/supreme/opinions/2019/index.htm</a></p>
+	
 	<h2>April 12, 2019</h2>
 
 	<p>Objection to Trustees' Petition to Appoint Richard Evans as Trustee of the Clause 6 and Clause 8 Trusts Under the Will of Mary Baker G. Eddy can be
