--- a/partials/home.html
+++ b/partials/home.html
@@ -4,9 +4,8 @@
 	
 	<h2>June 14, 2019 </h2>
 	
-	<p>The ruling of the New Hampshire Supreme Court on the appeal lodged by Second Church, Melbourne, on January 11, 2019 may be read here, dated June 14, 2019.</p>
-	
-	<p><a href="https://www.courts.state.nh.us/supreme/opinions/2019/index.htm">https://www.courts.state.nh.us/supreme/opinions/2019/index.htm</a></p>
+	<p>The ruling of the New Hampshire Supreme Court on the appeal lodged by Second Church, Melbourne, on January 11, 2019 may be read here, dated June 14, 2019.
+		<a href="https://www.courts.state.nh.us/supreme/opinions/2019/index.htm">Read here.</a></p>
 	
 	<h2>April 12, 2019</h2>
 
