--- a/partials/home.html
+++ b/partials/home.html
@@ -217,11 +217,23 @@
 
 </section>
 
+<section>
+	
+	<h2>Statement of purpose</h2>
+
+	<p>The Mary Baker Eddy's Church and Trust Deeds Restoration website is the only communications outlet of the MBE Fund.  We strive to ensure that each document on this website is accurate and that any commentary is governed by evidence and the Golden Rule. We have no other written or spoken voice outside of this website.</p> 
+
+	<p>The sole objective of the MBE Fund is to bring the practical administration of our Leader's New Hampshire Trusts into line with the wishes of our Leader. By presenting ongoing violations of Mary Baker Eddy’s Trusts to the courts of New Hampshire, we are fulfilling our Leader’s expectations of her followers and of the New Hampshire courts. 
+
+	<p>These Trusts are written directives by Mary Baker Eddy and are enforceable under New Hampshire state law as she set them up, with special powers resting with the Chief Justice of the Supreme Court of New Hampshire (as stated in her 1907 Deed of Trust.)</p>
+	
+</section>
+
 
 <section id="homeQuote">
 
 	<a class="donate" href="#/donate">Donate to Fund</a>
-
+</p>
 	<p class="quote">"Strive it ever so hard, The Church of Christ, Scientist, can never do for its Leader what its Leader has done for this church; but its members can so protect their own thoughts that they are not unwittingly made to deprive their Leader of her rightful place as the revelator to this age of the immortal truths testified to by Jesus and the prophets."</p>
 
 	<p>'The Christian Science Journal', May 1906<br/>
