--- a/partials/home.html
+++ b/partials/home.html
@@ -2,7 +2,39 @@
 
 	<h1>Important Recent Developments in New Hampshire Court</h1>
 	
-	<h2>June 14, 2019 </h2>
+	<h2>April - June 2020</h2>
+	
+	<p>Submissions to the New Hampshire Probate Court to review the non-accounting for the $13.5m, from the sale of the Chestnut Hill home, into the Clause 8 trust.  
+		You may read these amicus curiae briefs and the rebuttals here:
+		<ul>
+			<li><a href="assets/2020 03 03 DCT to Probate Crt re 400 B St.pdf">2020 03 03 DCT to Probate Crt re 400 B St.pdf</a></li>
+			<li><a href="assets/2020 04 16 DCT rejects appl for amicus 400 B.pdf">2020 04 16 DCT rejects appl for amicus 400 B.pdf</a></li>
+			<li><a href="assets/2020 04 Resp to Report of DCT 400 Beacon St.pdf">2020 04 Resp to Report of DCT 400 Beacon St.pdf</a></li>
+			<li><a href="assets/2020 05 01 Reply to Obj by DCT.pdf">2020 05 01 Reply to Obj by DCT.pdf</a></li>
+			<li><a href="assets/2020 05 01 Reply to Obj by Trustees.pdf">2020 05 01 Reply to Obj by Trustees.pdf</a></li>
+			<li><a href="assets/2020 06 04 Judge E Leonard.pdf">2020 06 04 Judge E Leonard.pdf</a></li>
+			<li><a href="assets/2020 06 15 Motion Reconsider DCT.pdf">2020 06 15 Motion Reconsider DCT.pdf</a></li>
+		</ul>
+	</p>
+	
+	<h2>March 2020</h2>
+	
+	<p>American Court activities largely suspended due to the pandemic.</p>
+	
+	<h2>September 2019</h2>
+	
+	<p>The Trustees under the Will of Mary Baker Eddy submitted their audited annual accounts to the Director of Charitable Trusts.  
+		Their submission was not made known to interested parties for their review:
+		<ul>
+			<li>as to whether the sale – and resulting interest on the sale - of Mrs Eddy’s Chestnut Hill home (held under trust) to 
+				Longyear Foundation in 2006 would be accounted for within the trust;</li>
+			<li>or whether the audit would list the submissions for funds by those promoting Christian Science, as well as the funds 
+				that had been paid out.</li>
+		</ul>
+
+		The Director of Charitable Trusts accepted the Trustees’ annual accounts.</p>
+	
+	<h2>June 14, 2019</h2>
 	
 	<p>The ruling of the New Hampshire Supreme Court on the appeal lodged by Second Church, Melbourne, on January 11, 2019 may be read here, dated June 14, 2019.
 		<a href="https://www.courts.state.nh.us/supreme/opinions/2019/index.htm">Read here.</a></p>
