--- a/partials/home.html
+++ b/partials/home.html
@@ -7,13 +7,13 @@
 	<p>Submissions to the New Hampshire Probate Court to review the non-accounting for the $13.5m, from the sale of the Chestnut Hill home, into the Clause 8 trust.  
 		You may read these amicus curiae briefs and the rebuttals here:
 		<ul>
-			<li><a href="assets/2020 03 03 DCT to Probate Crt re 400 B St.pdf">2020 03 03 DCT to Probate Crt re 400 B St.pdf</a></li>
-			<li><a href="assets/2020 04 16 DCT rejects appl for amicus 400 B.pdf">2020 04 16 DCT rejects appl for amicus 400 B.pdf</a></li>
-			<li><a href="assets/2020 04 Resp to Report of DCT 400 Beacon St.pdf">2020 04 Resp to Report of DCT 400 Beacon St.pdf</a></li>
-			<li><a href="assets/2020 05 01 Reply to Obj by DCT.pdf">2020 05 01 Reply to Obj by DCT.pdf</a></li>
-			<li><a href="assets/2020 05 01 Reply to Obj by Trustees.pdf">2020 05 01 Reply to Obj by Trustees.pdf</a></li>
-			<li><a href="assets/2020 06 04 Judge E Leonard.pdf">2020 06 04 Judge E Leonard.pdf</a></li>
-			<li><a href="assets/2020 06 15 Motion Reconsider DCT.pdf">2020 06 15 Motion Reconsider DCT.pdf</a></li>
+			<li><a href="assets/2020 03 03 DCT to Probate Crt re 400 B St.pdf">2020 03 03 - DCT to Probate Court re 400 Beacon St</a></li>
+			<li><a href="assets/2020 04 16 DCT rejects appl for amicus 400 B.pdf">2020 04 16 - DCT Rejects Application for Amicus 400 Beacon St</a></li>
+			<li><a href="assets/2020 04 Resp to Report of DCT 400 Beacon St.pdf">2020 04 - Response to the Report of DCT 400 Beacon St</a></li>
+			<li><a href="assets/2020 05 01 Reply to Obj by DCT.pdf">2020 05 01 - Reply to Objection by DCT</a></li>
+			<li><a href="assets/2020 05 01 Reply to Obj by Trustees.pdf">2020 05 01 - Reply to Objection by Trustees</a></li>
+			<li><a href="assets/2020 06 04 Judge E Leonard.pdf">2020 06 04 - Judge E Leonard</a></li>
+			<li><a href="assets/2020 06 15 Motion Reconsider DCT.pdf">2020 06 15 - Motion to Reconsider to DCT</a></li>
 		</ul>
 	</p>
 	
