--- a/partials/home.html
+++ b/partials/home.html
@@ -15,7 +15,7 @@
 			<li><a href="assets/2020 06 04 Judge E Leonard.pdf">2020 06 04 - Judge E Leonard</a></li>
 			<li><a href="assets/2020 06 15 Motion Reconsider DCT.pdf">2020 06 15 - Motion to Reconsider to DCT</a></li>
 		</ul>
-	</p>
+	</p>lauded 
 	
 	<h2>March 2020</h2>
 	
@@ -134,7 +134,7 @@
 		<li>He confirmed that the Trustees violated the Court Stipulation Order for 2001 by not complying with the Court's requirement to audit trust funds.</li>
 		<li>He confirmed the violation by the Trustees of the Court order for their unapproved movement of funds, and required that any future movement of funds be approved by the Probate Court.</li>
 		<li>He recognised the embedded conflict of the fiduciary obligations that exist with the Trustees u/w of Mary Baker Eddy, who are also the Board of Directors of The Mother Church, and referred this conflict of interest matter to the Director of Charitable Trusts for further ruling.</li>
-		<li>He read, but formally declined to receive the Amicus Curiae brief (submitted by Second Church, Melbourne) on behalf of the Director of Charitable Trusts, as it was not necessary to the hearing; but lauded and encouraged Second Church to continue its work in support of the Director of Charitable Trusts.</li>
+		<li>He read, but formally declined to receive the Amicus Curiae brief (submitted by Second Church, Melbourne) on behalf of the Director of Charitable Trusts, as it was not necessary to the hearing; but encouraged Second Church to continue its work in support of the Director of Charitable Trusts.</li>
 		<li>To read Judge King’s complete Ruling, please <a href="assets/CourtDecisionOnMotionsToAmend.pdf">click here.</a></li>
 	</ul>
 
@@ -179,15 +179,10 @@
 		has been or who is the First Reader of a church, to inform the Board of Directors
 		of the failure of the Committee on Publication <i>or any other officer</i> in this Church
 		to perform his official duties." [Emphasis added]</p>
-	<p>It is now fifteen years since these documents were given to the Directors, and
-		they have yet to acknowledge their existence, or realign their activities to bring
-		them into conformity with our Leader’s clear direction. Every attempt was
-		made to explain these crucial legal documents of our Pastor Emeritus to the
-		Board. Each attempt was refused or ignored.</p>
-	<p>It is now clear that over the decades, successive Boards of Directors/Trustees
-		under the will, have been in default of their legal, religious, and fiduciary duties,
-		because they violated our Leader’s will and Trust Deeds. The current Board of
-		Directors have continued in these defaults.</p>
+	<pIt is now clear that over the decades, successive Boards of Directors/Trustees under the will, 
+	     have been in default of their legal, religious, and fiduciary duties, because they - knowingly 
+	     or unknowingly - violated our Leader’s will and Trust Deeds. The current Board of Directors 
+	     have continued in these defaults.</p>
 	<p>Defaults include, but are not limited to: </p>
 	<ul>
 		<li>The failure to recognize Mrs Eddy’s instructions in the December 21, 1903
@@ -206,7 +201,7 @@
 			Pastor Emeritus’ Trusts. This has led to a cessation of funding to the field
 			for the furtherance of Christian Science, as required under the Clause 8
 			Trust in her will. (See "1914 Purpose" under Trust Deeds and Documents
-			tab.)</li>
+			tab.) This requirement was recognized by the Court and reinstated in 2018.</li>
 	</ul>
 	<!--<p>Therefore, under specific provisions of (1) Church Manual By-laws, (2) New
 		Hampshire Trust law, and (3) the Pastor Emeritus’ Trust Deeds, the current
@@ -236,16 +231,6 @@
 	<h1>You are invited to donate to this fund &mdash;</h1>
 	<h2>To reinstate Mary Baker Eddy's place, her jurisdiction, her deeds of trust and her by-laws. On the completion of this duty, all residual funds will be donated to her Church.</h2>
 	<!--<h2>This fund aims to:</h2>-->
-
-	<ol>
-		<li>Financial controls and reporting reinstated</li>
-		<li>The restoration of individual office holders for checks and balances</li>
-		<li>"The Christian Science Monitor" reinstated with its metaphysical requirements</li>
-		<li>The periodicals offering the absolute of Christian Science with its full healing effect – "the prophylactic and therapeutic .... arts belong emphatically to Christian Science"- SCIENCE AND HEALTH page 369:23</li>
-		<li>Committee on Publication once again lifting off the impositions on our Leader and Christian Science, including those self inflicted - the "myths of the Church Manual", and the misdirection imposed by overtures to the National and World Council of Churches</li>
-		<li>Church Manual reinstated with its unadulterated healing effect</li>
-		<li>Metaphysical College reinstated in its pre-eminence, teaching Christian Science as taught by Mary Baker Eddy</li>
-	</ol>
 
 </section>
 
