--- a/partials/home.html
+++ b/partials/home.html
@@ -179,7 +179,7 @@
 		has been or who is the First Reader of a church, to inform the Board of Directors
 		of the failure of the Committee on Publication <i>or any other officer</i> in this Church
 		to perform his official duties." [Emphasis added]</p>
-	<pIt is now clear that over the decades, successive Boards of Directors/Trustees under the will, 
+	<p>It is now clear that over the decades, successive Boards of Directors/Trustees under the will, 
 	     have been in default of their legal, religious, and fiduciary duties, because they - knowingly 
 	     or unknowingly - violated our Leader’s will and Trust Deeds. The current Board of Directors 
 	     have continued in these defaults.</p>
