--- a/partials/home.html
+++ b/partials/home.html
@@ -2,6 +2,31 @@
 
 	<h1>Important Recent Developments in New Hampshire Court</h1>
 	
+	<h2>October 2021</h2>
+	
+	<p>The purpose of the Clause 6 Trust may be <a href="https://mbefund.net/#/will">viewed here</a>.</p>
+	
+	<p>The purpose of the Clause 8 Trust may be <a href="https://mbefund.net/#/will">viewed here</a>.</p>
+	
+	<p>This charitable trust financial information is open for public viewing.</p>
+	
+	<p>The annual audited accounts for the Clause 6 and 8 trusts under the will of Mary Baker Eddy may 
+		be <a href="http://mbefund.net/assets/Court.JFR.Letter Enclosing Annual Accounts.10.01.21.pdf" read here</a>. They were 
+		submitted to the New Hampshire Attorney General in October 2021. The beneficiaries for this year may be found on pages 252, 253, 254</p>
+	
+	<h2>November 2020</h2>
+	
+	<p>The purpose of the Clause 6 Trust may be <a href="https://mbefund.net/#/will">viewed here</a>.</p>
+	
+	<p>The purpose of the Clause 8 Trust may be <a href="https://mbefund.net/#/will">viewed here</a>.</p>
+	
+	<p>This charitable trust financial information is open for public viewing.</p>
+	
+	<p>The annual audited accounts for the Clause 6 and 8 trusts under the will of Mary Baker Eddy may 
+		be <a href="http://mbefund.net/assets/20201029-Trustee's Annual Accounts for year ending 3.31.2020-RBE.pdf">read here</a>.
+		They were submitted to the New Hampshire Attorney General in November 2020. The history of the accounts is 
+		related on pages 218, 219.</p>
+	
 	<h2>April - June 2020</h2>
 	
 	<p>Submissions to the New Hampshire Probate Court to review the non-accounting for the $13.5m, from the sale of the Chestnut Hill home, into the Clause 8 trust.  
@@ -21,6 +46,20 @@
 	
 	<p>American Court activities largely suspended due to the pandemic.</p>
 	
+	<h2>October 31, 2019</h2>
+
+	<p>The purpose of the Clause 6  and 8 Trusts may be read on page 109 of the 116 page report</p>
+
+	<p>This charitable trust financial information is open for public viewing.</p>
+
+	<p>The annual audited accounts for the Clause 6 and 8 trusts under the will of Mary Baker Eddy may 
+		be <a href="http://mbefund.net/assets/New Hampshire Annyal Accounts 10.31.2019.pdf">read here</a>.   
+		They were submitted to the New Hampshire Attorney General in October 2019.</p>
+
+	<p>Please note that these are the first independently audited accounts to be submitted to the New Hampshire Attorney 
+		General since the 1980's.  The correct presentation of accounts is the result of the queries and objections
+		submitted by Second Church of Christ, Scientist, Melbourne to the New Hampshire Probate Court  as outlined on this website.</p>
+
 	<h2>September 2019</h2>
 	
 	<p>The Trustees under the Will of Mary Baker Eddy submitted their audited annual accounts to the Director of Charitable Trusts.  
