--- a/partials/home.html
+++ b/partials/home.html
@@ -11,7 +11,7 @@
 	<p>This charitable trust financial information is open for public viewing.</p>
 	
 	<p>The annual audited accounts for the Clause 6 and 8 trusts under the will of Mary Baker Eddy may 
-		be <a href="http://mbefund.net/assets/Court.JFR.Letter Enclosing Annual Accounts.10.01.21.pdf" read here</a>. They were 
+		be <a href="http://mbefund.net/assets/Court.JFR.Letter Enclosing Annual Accounts.10.01.21.pdf"> read here</a>. They were 
 		submitted to the New Hampshire Attorney General in October 2021. The beneficiaries for this year may be found on pages 252, 253, 254</p>
 	
 	<h2>November 2020</h2>
