--- a/partials/home.html
+++ b/partials/home.html
@@ -2,7 +2,7 @@
 
 	<h1>Important Recent Developments in New Hampshire Court</h1>
 	
-	<h2>October 2021</h2>
+	<h2>October 2021 - Lodgement of Annual Accounts</h2>
 	
 	<p>The purpose of the Clause 6 Trust may be <a href="https://mbefund.net/#/will">viewed here</a>.</p>
 	
@@ -14,7 +14,7 @@
 		be <a href="http://mbefund.net/assets/Court.JFR.Letter Enclosing Annual Accounts.10.01.21.pdf"> read here</a>. They were 
 		submitted to the New Hampshire Attorney General in October 2021. The beneficiaries for this year may be found on pages 252, 253, 254</p>
 	
-	<h2>November 2020</h2>
+	<h2>November 2020 - Lodgement of Annual Accounts</h2>
 	
 	<p>The purpose of the Clause 6 Trust may be <a href="https://mbefund.net/#/will">viewed here</a>.</p>
 	
@@ -46,7 +46,7 @@
 	
 	<p>American Court activities largely suspended due to the pandemic.</p>
 	
-	<h2>October 31, 2019</h2>
+	<h2>October 31, 2019 - Lodgement of Annual Accounts</h2>
 
 	<p>The purpose of the Clause 6  and 8 Trusts may be read on page 109 of the 116 page report</p>
 
