--- a/partials/home.html
+++ b/partials/home.html
@@ -25,7 +25,7 @@
 	<p>The annual audited accounts for the Clause 6 and 8 trusts under the will of Mary Baker Eddy may 
 		be <a href="http://mbefund.net/assets/20201029-Trustee's Annual Accounts for year ending 3.31.2020-RBE.pdf">read here</a>.
 		They were submitted to the New Hampshire Attorney General in November 2020. The history of the accounts is 
-		related on pages 218, 219.</p>
+		related on pages 218, 219. The beneficiaries for this year may be found on page 122.</p>
 	
 	<h2>April - June 2020</h2>
 	
@@ -54,7 +54,7 @@
 
 	<p>The annual audited accounts for the Clause 6 and 8 trusts under the will of Mary Baker Eddy may 
 		be <a href="http://mbefund.net/assets/New Hampshire Annyal Accounts 10.31.2019.pdf">read here</a>.   
-		They were submitted to the New Hampshire Attorney General in October 2019.</p>
+		They were submitted to the New Hampshire Attorney General in October 2019. The beneficiaries for this year may be found on page 72.</p>
 
 	<p>Please note that these are the first independently audited accounts to be submitted to the New Hampshire Attorney 
 		General since the 1980's.  The correct presentation of accounts is the result of the queries and objections
