--- a/partials/home.html
+++ b/partials/home.html
@@ -40,11 +40,11 @@
 			<li><a href="assets/2020 06 04 Judge E Leonard.pdf">2020 06 04 - Judge E Leonard</a></li>
 			<li><a href="assets/2020 06 15 Motion Reconsider DCT.pdf">2020 06 15 - Motion to Reconsider to DCT</a></li>
 		</ul>
-	</p>lauded 
+	</p> 
 	
 	<h2>March 2020</h2>
 	
-	<p>American Court activities largely suspended due to the pandemic.</p>
+	<p>American Court activities interrupted due to the pandemic.</p>
 	
 	<h2>October 31, 2019 - Lodgement of Annual Accounts</h2>
 
