--- a/partials/donate.html
+++ b/partials/donate.html
@@ -30,7 +30,7 @@
 
 
 
-	<p>Members of The Mother Church are invited to support this fund for the legal recognition and enforcement of Mrs Eddy’s trust deeds and Manual, and the appointment of five new members of the Board.  Mrs Eddy gave oversight for the proper conduct of her Church to the New Hampshire Court, and it is to this body that members now have recourse, to return the church to its pure purpose and foundation.  Following the successful outcome of this action, residual monies in the fund will be donated to The Mother Church.</p>
+	<p>Members of The Mother Church are invited to support this fund for the legal recognition and enforcement of Mrs Eddy’s trust deeds.  Mrs Eddy gave oversight for the proper conduct of her Church to the New Hampshire Court, and it is to this body that members now have recourse, to return the church to its pure purpose and foundation.  Following the successful outcome of this action, residual monies in the fund will be donated to The Mother Church.</p>
 
 	<p>Every member is invited to consider their duties and obligations under the Church Manual and to pray for the restoration of Mary Baker Eddy’s Church (see Man. 102:17).  Our Leader cannot be separated from the ideal she laboured to bring forth, and protect, for the benefit and salvation of all mankind.  Our Leader’s vision and demonstration of divine Truth must not be subordinated to human vagaries, ecumenism, distortion or popularisation on the pretext of ‘spreading the word’.</p>
 
