--- a/partials/home.html
+++ b/partials/home.html
@@ -1,6 +1,16 @@
 <section id="homeContent">
 
 	<h1>Important Recent Developments in New Hampshire Court</h1>
+
+	<h2>October 2021 - Lodgement of Annual Accounts</h2>
+
+<p>This charitable trust financial information is open for public viewing.</p>
+
+<p>The annual audited accounts for the Clause 6 and 8 trusts under the will of Mary Baker Eddy may be <a href="http://mbefund.net/assets/317-1910-TU-00001.pdf">read here</a>. 
+	They were submitted to the New Hampshire Attorney General in October 2022. The beneficiaries for this year may be found on pages 252, 253, 254</p>
+
+
+	
 	
 	<h2>October 2021 - Lodgement of Annual Accounts</h2>
 	
