--- a/partials/home.html
+++ b/partials/home.html
@@ -2,16 +2,25 @@
 
 	<h1>Important Recent Developments in New Hampshire Court</h1>
 
+	<h2>June 29, 2023</h2>
+	<p>Letter to NH Director of Charitable Trusts responding to her letter of February 17, 2023
+		<a href="http://mbefund.net/assets/Letter to Diane Quinlan.pdf">Read here.</a></p>
+	
+	<h2>February 17, 2023</h2>
+	<p>Letter from the NH Director of Charitable Trusts responding to the objections.
+		<a href="http://mbefund.net/assets/Letter to R. Eyre re Mary Baker Eddy Clause VI and VIII Trusts.pdf">Read here.</a></p>
+	
+	<h2>December 10, 2022</h2>
+	<p>Letter to NH Director of Charitable Trusts citing objections to the annual accounts.
+		<a href="http://mbefund.net/assets/letter to dquinlan nhag.pdf">Read here.</a></section>p> 
+	
 	<h2>October 2021 - Lodgement of Annual Accounts</h2>
 
-<p>This charitable trust financial information is open for public viewing.</p>
+	<p>This charitable trust financial information is open for public viewing.</p>
 
-<p>The annual audited accounts for the Clause 6 and 8 trusts under the will of Mary Baker Eddy may be <a href="http://mbefund.net/assets/317-1910-TU-00001.pdf">read here</a>. 
-	They were submitted to the New Hampshire Attorney General in October 2022. The beneficiaries for this year may be found on pages 252, 253, 254</p>
+	<p>The annual audited accounts for the Clause 6 and 8 trusts under the will of Mary Baker Eddy may be <a href="http://mbefund.net/assets/317-1910-TU-00001.pdf">read here</a>. 
+		They were submitted to the New Hampshire Attorney General in October 2022. The beneficiaries for this year may be found on pages 252, 253, 254</p>
 
-
-	
-	
 	<h2>October 2021 - Lodgement of Annual Accounts</h2>
 	
 	<p>The purpose of the Clause 6 Trust may be <a href="https://mbefund.net/#/will">viewed here</a>.</p>
