--- a/partials/home.html
+++ b/partials/home.html
@@ -12,7 +12,7 @@
 	
 	<h2>December 10, 2022</h2>
 	<p>Letter to NH Director of Charitable Trusts citing objections to the annual accounts.
-		<a href="http://mbefund.net/assets/letter to dquinlan nhag.pdf">Read here.</a></section>p> 
+		<a href="http://mbefund.net/assets/letter to dquinlan nhag.pdf">Read here.</a></p> 
 	
 	<h2>October 2021 - Lodgement of Annual Accounts</h2>
 
